# Team-Management-B2B

./: README.md
backend/: .env  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routers/: task.py
backend/app/api/schemas/: task.py
backend/app/core/: auth.py  clerk.py
backend/app/databases/: models.py  sessions.py
frontend/: .env  package-lock.json  package.json
frontend/src/: main.jsx
frontend/src/pages/: DashboardPage.jsx  HomePage.jsx  PricingPage.jsx  SignInPage.jsx  SignUp.jsx
