[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clerk-backend-api>=5.0.6",
    "fastapi[standard]>=0.136.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "scalar-fastapi>=1.0.0",
    "sqlmodel>=0.0.14",
    "svix>=1.92.2",
    "uvicorn>=0.46.0",
]
